--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,13 @@
-
 upstream container {
     server app;
 }
-server {
-    server_name ~^(?<name>\w+)\.localhost$;
-    location / {
-        add_header test $name;
-        proxy_pass http://container/$name;
-    }
 
-    
+server {
+  listen 80;
+  server_name ~^(?<name>\w+)\.localhost$;
+  location / {
+    proxy_pass       http://container/$name;
+    proxy_set_header Host            $host;
+    proxy_set_header X-Forwarded-For $remote_addr;
+  }
 }
